--- a/domaci-kucharka.html
+++ b/domaci-kucharka.html
@@ -3,6 +3,7 @@
 <head>
 	<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 	<title>Domácí kuchařka</title>
+	<meta name="viewport" content="width=device-width" />
 </head>
 
 <body>
