--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -1,4 +1,4 @@
-<a name="hovezi-maso-a-rozlicna-jeho-uprava"><h1>Hovězí maso a rozličná jeho úprava</h1></a>
+<h1>Hovězí maso a rozličná jeho úprava</h1>
 
 <h2>Obyčejné hovězí maso</h2>
 
