--- a/src/jeste-nektera-postni-jidla.html
+++ b/src/jeste-nektera-postni-jidla.html
@@ -1,4 +1,4 @@
-<a name="jeste-nektera-postni-jidla"><h1>Ještě některá postní jídla</h1></a>
+<h1>Ještě některá postní jídla</h1>
 
 <h2>Karbanátky a klobásy z kapra</h2>
 
