--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -1,4 +1,4 @@
-<a name="ledy-rozlicnych-barev"><h1>Ledy rozličných barev</h1></a>
+<h1>Ledy rozličných barev</h1>
 
 <h2>k ozdobení dortů a cukrovinek</h2>
 
