--- a/src/masite-rosoly-huspeniny-sulzen.html
+++ b/src/masite-rosoly-huspeniny-sulzen.html
@@ -1,4 +1,4 @@
-<a name="masite-rosoly-huspeniny-sulzen"><h1>Masité rosoly (huspeniny, Sulzen)</h1></a>
+<h1>Masité rosoly (huspeniny, Sulzen)</h1>
 
 <h2>Aspik</h2>
 
