--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -1,4 +1,4 @@
-<a name="moucna-jidla-obycejna-i-jemnejsi"><h1>Moučná jídla, obyčejná i jemnější</h1></a>
+<h1>Moučná jídla, obyčejná i jemnější</h1>
 
 <h2>Moučné knedlíky</h2>
 
