--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -1,4 +1,4 @@
-<a name="nadivky-do-kolacu-buchticek-a-koblih"><h1>Nádivky do koláčů, buchtiček a koblih</h1></a>
+<h1>Nádivky do koláčů, buchtiček a koblih</h1>
 
 <h2>Povidla</h2>
 
