--- a/src/nalozeniny-k-hovezimu-masu.html
+++ b/src/nalozeniny-k-hovezimu-masu.html
@@ -1,4 +1,4 @@
-<a name="nalozeniny-k-hovezimu-masu"><h1>Naloženiny k hovězímu masu</h1></a>
+<h1>Naloženiny k hovězímu masu</h1>
 
 <h2>Okurky ve vodě naložené</h2>
 
