--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -1,4 +1,4 @@
-<a name="omacky-k-hovezimu-masu"><h1>Omáčky k hovězímu masu</h1></a>
+<h1>Omáčky k hovězímu masu</h1>
 
 <h2>Omáčka cibulková</h2>
 
