--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -1,4 +1,4 @@
-<a name="ovocni-zavareninky"><h1>Ovocní zavařeninky</h1></a>
+<h1>Ovocní zavařeninky</h1>
 
 <p>Hodí se k nadívání dortů, koblih a jiných pamlsek.</p>
 
