--- a/src/raci-zaby-sneci-a-musle.html
+++ b/src/raci-zaby-sneci-a-musle.html
@@ -1,4 +1,4 @@
-<a name="raci-zaby-sneci-a-musle"><h1>Raci, žáby, šneci a mušle</h1></a>
+<h1>Raci, žáby, šneci a mušle</h1>
 
 <h2>Raci s omáčkou</h2>
 
