--- a/src/zadelavana-zverina.html
+++ b/src/zadelavana-zverina.html
@@ -1,4 +1,4 @@
-<a name="zadelavana-zverina"><h1>Zadělávaná zvěřina</h1></a>
+<h1>Zadělávaná zvěřina</h1>
 
 <h2>Černá zvěřina (divoký kanec)</h2>
 
