--- a/src/zavarene-cele-ovoce.html
+++ b/src/zavarene-cele-ovoce.html
@@ -1,4 +1,4 @@
-<a name="zavarene-cele-ovoce"><h1>Zavařené celé ovoce</h1></a>
+<h1>Zavařené celé ovoce</h1>
 
 <h2>Jak se ovoce v páře zavařuje</h2>
 
