--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -1,4 +1,4 @@
-<a name="polivky-masite"><h1>Polívky masité</h1></a>
+<h1>Polívky masité</h1>
 
 <p>Polívka je základ každé větší i menší hostiny. Dobrý znatel soudí dle polívky na celý oběd; každá kuchařka musí tedy býti toho bedlivá, aby jak náleží chutné polívky připraviti uměla. O zacházeni s hovězím masem a kterak se obyčejná dobrá polívka docílí, jest v úvodu dosti obšírně pojednáno, o tom tedy slov šířiti nebudu, nýbrž přikročím hned k pojednáni o úpravnějších polívkách.</p>
 
