--- a/src/prichoutky-cili-asietky.html
+++ b/src/prichoutky-cili-asietky.html
@@ -1,4 +1,4 @@
-<a name="prichoutky-cili-asietky"><h1>Příchoutky čili asietky</h1></a>
+<h1>Příchoutky čili asietky</h1>
 
 <p>V nynější době jest obyčejem, při každé i sebe menši hostině po polívce před hovězím masem nějakou příchoutku podati, pročež uvádím jich tu jistou část, kterou však vtipná kuchařka všelikými vlastními změnami ještě rozmnožit může.</p>
 
