--- a/src/zadelavana-a-dusena-jidla.html
+++ b/src/zadelavana-a-dusena-jidla.html
@@ -1,4 +1,4 @@
-<a name="zadelavana-a-dusena-jidla"><h1>Zadělávaná a dušená jídla</h1></a>
+<h1>Zadělávaná a dušená jídla</h1>
 
 <h2>Kuřata s knedlíčkami</h2>
 
