--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -12,7 +12,7 @@
 
 <p>d) Také se může maso jenom nakrájenými kyselými okurkami, hryzcemi anebo řetkvičkou okrášlit.</p>
 
-<h2><i></i>Dušené hovězí maso</h2>
+<h2>Dušené hovězí maso</h2>
 
 <p>Sklepej dobře pěkný kus hovězího masa z kejty, osol ho a dobře slaninou (špekem) prostrkej, dej na rendlík kousek másla, ku př. na čtyry libry masa tři krty másla, jednu na koláčky rozkrájenou cibuli, dva kořínky petružele, jeden celer, 12 celých pepřů, tři kousky zázvoru, pak na to vlož to sklepané maso, nalej na to asi tři čtvrtě žejdlíka vody nebo neslané polívky, přikrej to pokličkou a nech to dusit; obracej však maso častěji, aby bylo všude stejně měkké. Když je dost měkké, přelož ho na jiný rendlík, se šťávy seber mastnotu, proceď ji zase na maso a nech ho hezky do hnědá opéct; pak rozetři 4 sardele snovým máslem, dej je k tomu, též plnou lžíci kaprlí, půl žejdlíka červeného vína, kouštínek hnědé jíšky, a nech to ještě trochu spejchnout; potom polož maso na mísu a podlej ho omáčkou. Kdyby byla omáčka příliš hustá, přilej krapýtek hovězí polívky, maso posyp smaženou strouhanou žemličkou, nebo ho poklaď citronovými koláčky.</p>
 
