--- a/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
+++ b/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
@@ -48,7 +48,7 @@
 
 <p>Šest lotů přepouštěného másla, šest žloutků a šest lotů cukru tři půl hodiny, potom k tomu přimichej šest lotů pěkné mouky a ze šesti bílků tuhý sníh, vymaž máslem formu, s nižto okolek sejmouti se nechá, vysyp ji strouhanou žemličkou, vlej těsto do ní, poklaď ho čerstvými, na osm dílů rozkrájenými švestkami, a sice slupkou dolů a masem vzhůru, a nech ho tři čtvrtě hodiny zvolna pect; pak sejmi okolek, koláč nech vystydnout a posyp ho tlučeným cukrem.</p>
 
-<h2>1<i></i>Jiný koláč se švestkami</h2>
+<h2>Jiný koláč se švestkami</h2>
 
 <p>Šest lotů čerstvého a šest lotů převařeného másla tři půl hodiny na míse, a mezi ustavičným mícháním přidávej k tomu dvanáct žloutků, patnáct lžic vlažné smetany, čtyry lžíce hustých kvasnic, čtyry lžíce tlučeného cukru, s půl citronu nakrájenou kůru a tolik mouky, abys měla pěkné jemné těsto, osol ho trošku a nech ho skynout; potom z něho Udělej na pomaštěný plech velký koláč, poklad ho hodně husté čerstvými vyloupanými švestkami, kraje pomaž rozpuštěným máslem a nech koláč ještě trochu skynout, načež ho pěkně do zlatova upeč a pak ho posyp cukrem.</p>
 
