--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -86,7 +86,7 @@
 
 <p>Udělej ze dvou vajec nudličky a nech je ve smetaně dobře vysmahnout, pak dej do nich trochu na citronu ostrouhaného cukru, kouštínek másla, a nech je vychladnout. Dej do hrnečku 5 lžic mouky, 6 žloutků a žejdlík dobré sladké smetany, dobře to rozkloktej, osol to trochu, vlej to na rendlík, nech to na uhlíčku vařit, a míchej tím pořád, až to zhoustne; pak to dej na misku, utři to s kouskem nového másla, a dej do toho kousek tlučeného cukru; potom to namaž na papír asi na dvě stébla tlustě, dej to na plech a nech to do žluta upéct. Když je to upečené, pomaž to těmi připravenými nudlemi, posyp to drobnince sekanými mandlemi, postříkej to račím máslem a zaviň to jako tažený štrudl; nyní z toho nakrájej na prst tlusté lístky, poklop hluboký talíř (nebo mísu) na mělký, urovnej na něj ty nakrájené lístky pěkně jako kopeček, postříkej to trochu sladkou smetanou a račím máslem, posyp to sekanými mandlemi, oblož to račími ocásky a nech to malinko v troubě opéct; potom to posyp cukrem a dej to na stůl.</p>
 
-<h2><i></i>Nudle s jablkami</h2>
+<h2>Nudle s jablkami</h2>
 
 <p>Udělej ze třech vajec nudle; uvař je ve slané vodě, oceď je a nech je prohladnout. Utři nového másla 3 loty, dej do něho ty nudle, vraz do toho 6 žloutků, dej k tomu 3 loty tlučeného cukru a trochu skořice, a dobře to promíchej. Oloupej míšeňská jablka, seřízni víčka, jablka nožem vystrouhej, naplň je nějakou zavařeninkou, a zase je víčkama přikrej. Nyní dej nudle do máslem vymazané formy, nastrkej do nich ty jablka, tak, aby byly jen něco přes polovic v nudlích, ostatek aby koukal ven, poklad to po vrchu kouskami nového másla, posyp to hrubým cukrem a nech to péct. Mezi pečením musí se sypáni cukrem ještě asi dvakrát opakovat, aby to po vrchu dostalo pěknou červenou kůrčičku.</p>
 
