--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -4,7 +4,7 @@
 
 <p>Vezmi buď dobré slívové povidla, nebo uvař suché slívy a dobře je usekej, dej je na rendlíček, k nim kousek nového másla, trochu drobně rozkrájené citronové kůry, trochu hřebíčku a tlučeného cukru tolik, aby byly dosti sladké. Mnoho-li se čeho má dáti, nedá se ustanovit, protože se kuchařka musí řídit dle množství povidel. Nechají se trochu prohřát, pak vychladnout, načež se jich použije buď na koláče, koblihy nebo na buchtičky.</p>
 
-<h2><i></i>Mák</h2>
+<h2>Mák</h2>
 
 <p>Mák se může buď tlouct za subha, nebo se dříve přemeje ve vodě, pak ve smetaně do měkka uvaří a potom se ve zvláštní k tomu zřízené pánvi dobře rozetře. Když jest rozetřen, dá se na rendlíček, k němu kousek másla, a je-li za sucha tlučen, tedy se přileje do něho sladké smetany, a nechá se ještě vařit, aby z něho byla hustá kašička<b>, </b>přidá se k němu buď cukru nebo českého medu tolik, aby byl dostatečně sladký, pak se do něho dá dle libosti buď citronové nebo cukrované pomerančové kůry a buď hřebíčku nebo skořice anebo květu. Každý si může dle libosti dát chuť jakou chce.</p>
 
