--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -6,7 +6,7 @@
 
 <p>Tak se dělá též česneková omáčka.</p>
 
-<h2><i></i>Omáčka polská</h2>
+<h2>Omáčka polská</h2>
 
 <p>Udělej jíšku tak jako při cibulové a česnekové omáčce, potom usekej zelený česnek, zelenou cibulku, stroužek česneku, kousek staré cibule, trochu pažitky a trochu zelené petružele, dej to do jíšky, nalej na to hovězí polívky a nech to povařit.</p>
 
