--- a/src/pastyky.html
+++ b/src/pastyky.html
@@ -4,7 +4,7 @@
 
 <p>Dej. na vál libru pěkné mouky a rozžmol v ní čtvrt libry čerstvého a čtvrt libry přepouštěného másla, pak v tom udělej důlek, vraz do toho tři žloutky a jedno celé vejce, osol to trošku, přilej několik lžic vína a několik lžic. vody, zadělej těsto hodně tuhé, prohněť a vypracuj ho náležitě, a nech ho pod miskou hodinu odpočinout.</p>
 
-<h2><i></i>Máslové těsto k&nbsp;paštykám</h2>
+<h2>Máslové těsto k&nbsp;paštykám</h2>
 
 <p>Máslové těsto nejlíp se podaří, –když se na noc zadělá á ráno teprv se rozvaluje. Vezmi tedy večer na vál pět čtvrtí libry mouky, rozděl ji na dva stejné díly, do jednoho dílu rozdrob čtyry loty čerstvého másla, udělej v tom důlek a zadělej těsto se čtyřmi žloutky a s několika lžícemi kyselé* smetany, osol, ho trochu a vypracuj ho náležitě nejméně půl hodiny, načež ho dej mezi dva talíře. Druhý díl. mouky vmíchej do dvaceti osmi lotů másla a hodně ho válečkem la vále vypracuj, pak ho dej mezi dva talíře a postav ho i s tím těstem na noc do chladného místa. Ráno rozválej těsto na placku jako německý koláč, taktéž máslo, polož oboje na sebe a rozválej ho pospolu co možná tence, načež to přelož na třikrát, tak jako šátek se skládá, a pak opět v šířce od levé ruky k pravé a od pravé. k levé, a nech to chvilku odpočinout, potom to zase rozválej, přelož opět jako poprvé, a nech to zase chvíli odpočinout; tak to opakuj ještě dvakrát, aby bylo těsto čtyrykrát přeloženo, načež ho rozválej na brk tlustě a dělej z něho buď malé nebo velké paštyky, jak dále udáno bude. – Z tohoto těsta mohou se také dělati všeliké jiné věci, jako na př. obloučky, taštičky se zavařeninkou anebo s mandlovou nádivkou.</p>
 
