--- a/src/pecene.html
+++ b/src/pecene.html
@@ -4,7 +4,7 @@
 
 <p>Hovězího masa od kejty vezme se aspoň 6 nebo 7 liber, aby byl pěkný špalíček, hodně se sklepá, pak  nasolí, slaninou (špekem) dle možnosti jako zajíc prostrká, načež se hezky posype tlučeným zázvorem, dá se na pekáč kus másla, maso se na něj položí, podleje se trochou vody a nechá se zpovolňounka aspoň 3 hodiny pect, aby hezky zčervenalo; musí se ale pořád obracet, aby také bylo měkké.</p>
 
-<h2><i></i>Telecí kejta na obyčejný způsob</h2>
+<h2>Telecí kejta na obyčejný způsob</h2>
 
 <p>Má-li telecí kejta býti křehká, musi aspoň tři nebo čtyry dni ve studenu ležet, v zimě třebas i déle; pak ji dříve nežli se namočí dobře sklepej, prostřední kost přeraz a nech kejtu asi hodinu ve vodě močit, načež ji přemej, nasol, dej na pekáč buď dvě vařečky anebo loučky, které však nesměji býti ze smolného dříví, poklaď je máslem, vlož na ně kejtu, poklaď ji též povrchu kouskami másla, podlej pod ní trochu vody a nech ji zvolna pect; musíš ji ale častěji obracet, aby se propekla, a jestli omáčka vysmahla, tedy podlej ještě trochu vody; pak přilípni na vařečku kus másla a mezi pečením kejtu častěji pomasti, až jest do tmavězlatova upečena; potom dej kejtu na mísu, podlej ji omáčkou, která musí míti světle hnědou barvu, a nes ji na tabuli. Omáčka se musi podlejt a nikoli na pečeni nalejt, sice tato stane se neouhlednou, jakož i propečením ztrácí na chuti.</p>
 
