--- a/src/polivky-masite.html
+++ b/src/polivky-masite.html
@@ -6,7 +6,7 @@
 
 <p>Dej na rendlík kus másla, dvě na koláčky rozkrájené cibule, jeden celer, dva kořeny petružele, dvě mrkve, jednu kapustu, všecko rozkrájené, potom rozkrájej na kousky libru hovězího, libru libového skopového a půl libry uzeného masa, vlož ho s rozličnými zbytky od drůbeže na tu zeleninu a nech to až do hnědá dusit; musíš však bedlivě dohlížet a častěji tím zamíchat, aby se to nepřipálilo; pak to dej do hrnku, nalej na to 8 nebo 10 žejdlíků hovězí polívky a nech to ještě asi hodinu vařit; potom polívku proceď, vlej ji do mísy na smažené, na nudličky rozkrájené žemličky, a nes ji na stůl.</p>
 
-<h2><i></i>Bílá polívka s rejží pro 6 osob</h2>
+<h2>Bílá polívka s rejží pro 6 osob</h2>
 
 <p>Ovař čtvrt libry přebrané a vařící vodou dobře vyprané rejže v dobré hovězí polívce, pak ji utři s kouskem čerstvého nového másla a se třemi žloutky, nalej na ni vařící hovězí polívku, dobře ji rozkverluj a vlej ji do mísy. Máš-li kuřecí pupíčky a jatýrka, tedy je na drobno skrájej a k tomu připoj.</p>
 
@@ -92,7 +92,7 @@
 
 <p>Druhý kuthan vyloží se též na dně slaninou, posype se cibulí na lístky rozkrájenou, pak se dá jeden malý celer, kořínek petružele, oboje na koláčky rozkrájeno, asi tři horkou slanou vodou spařené, na půlky rozkrájené kapusty, a na to se položí nasolený mladý bažantek (je-li více než 12 osob, musejí býti dva), přiklopí se pokličkou a nechá se to do hnědá dusit; musí se též častěji hovězí polívkou podlévat, aby se to nepřipálilo; potom se kapusta a bažantek vyndá, šťáva však i ta dušenina z prvního kuthanu dá se do hrnce, naleje se na to dobré hovězí polívky a nechá se to vařit asi půl hodiny, pak se to procedí, a nechá se to zase, až se to začne vařit; načež vhoď do té polívky asi ze dvou bílků sněhu a nech to chvilku povařit, tím se polívka vyčistí; nyní ji proceď buď skrz husté žíněné sejtko nebo skrz řídký ručniček (servítek); potom rozkrájej kapustu na nudličky, a bažantka též pravidelně rozkrájej a urovnej na mísu, okolo něho udělej věnec z těch kapustových nudliček a posyp to na kostky rozkrájenou, do zlatová smaženou žemličkou. Tato polívka čistá jako sklo buď se vleje na mísu, nebo se nosí v konvicích okolo; taktéž bažantek. Při nedostatku bažantů mohou se i koroptve k této polívce použit. Žemlička může též místo na kostky, na půlměsíčky nebo na třihraníčky rozkrájena a smažena býti, to si může kuchařka dle libosti zařídit.</p>
 
-<h2><i></i>Polívka mozečková se hříbkami</h2>
+<h2>Polívka mozečková se hříbkami</h2>
 
 <p>Rozkrájej mladé hříbky na tenké lístky a nech je se zelenou, drobně usekanou petruželkou na másle dusit. Uvař v trochu hovězí polívce dva telecí mozečky a protlač je skrze hustý cedník do hrnečku. Když pak hříbky již vysmahovat počínají a máslo se na nich pění, dej k nim lžíci pěkné mouky a nech to ještě chvilku dusit; potom dej k tomu mozeček, dobře to promíchej, dej vše do šestižejdlíkového hrnku, nalej na to dobrou hovézí polívku a nech to ještě povařit; pak to vlej na žemličku do zlatová usmaženou.</p>
 
