--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -294,10 +294,10 @@
 
 <p>Ovař tresku ve slané vodě a opatrně ji vyndej; dej na kastrol máslo, drobně rozkrájenou cibuli, trochu strouhané žemličky, a nech to do zlatova usmažit, pak na to vlej hořčice tolik, mnoho-li chceš míti omáčky, a nech to ještě přejít asi dva vary, potom to vlej na tresku a dej ji na stůl.</p>
 
-<h2>7<i></i>Treska na holandský způsob</h2>
+<h2>Treska na holandský způsob</h2>
 
 <p>Vezmi prostředni kus tresky, okrájej s něho kůži, dej ho na rendlík, osol ho a nech ho tak hodinu ležet, pak naň nalej dva žejdlíky vody a nech ho půl hodiny vařit; mezitím dej na rendlíček kus másla, popraš ho trochu moukou, přidej k tomu šťávu z jednoho citronu a dvě lžíce smetany, a stále tím míchej; pak vyndej tresku na mísu, posyp ji strouhanou žemličkou a petruželí, polej ji tou omáčkou a nes ji na stůl.</p>
 
-<h2>7<i></i>Puding z tresky</h2>
+<h2>Puding z tresky</h2>
 
 <p>Libru tresky uvař ve slané vodě, pak ji vyndej, odstraň všechny kůstky a maso drobně skrájej. Utři na misce čtyry loty másla, vraz do něho šest celých vajec, dej k tomu dvě ostrouhané, ve vodě namočené vymačkané žemličky, několik drobounce skrájených šalotek, asi čtvrt žejdlíka dobrého mléka, trochu tlučeného pepře a květu, osol to a dobře to promíchej, posléz k tomu dej to usekané maso a ještě to promíchej; nyní omoč čistý ubrousek ve studené vodě a vymačkej ho, pak do něho dej tu míšeninu, volně to zavaž a nech to ve slané vodě hodinu vařit; potom to vyndej na misku, posyp to žemličkou a polej máslem.</p>
