--- a/src/smazeniny-pofezky-svitky-a-kotletky.html
+++ b/src/smazeniny-pofezky-svitky-a-kotletky.html
@@ -90,7 +90,7 @@
 
 <p>Uvař vemeno do měkká ve slané vodě, pak ořež s něho všecky kůžičky, rozkrájej ho na pěkné ouhledné, ne příliš tlusté kousky, popraš je ještě krapýtkem soli, obal je nejdříve v mouce, pak v rozšlehaném vejci, konečně ve strouhané žemličce, a nech je na kastrolu v rozpáleném přepouštěném másle do zlatová usmažit.– Může se jim poklásti mrkev nebo také jiná zelenina.</p>
 
-<h2><i></i>Svitek z telecí ledvinky</h2>
+<h2>Svitek z telecí ledvinky</h2>
 
 <p>Někdo nejí rád telecí ledvinku pro tučnost; v tom pádu odřízni celou ledvinku, a když vystydne, skrájej ji okrouhlým nožem na drobninko, dej ji do hrnku, vraz k ní pět celých vajec, osol to, přidej k tomu tři vrchovaté lžíce strouhané žemličky, trochu drobně nakrájené citronové kůry, trochu nasekané zelené petružele, a dobře ho promíchej, pak vymaž kastrolek máslem, vysyp ho strouhanou žemličkou, vlej do něho tu míšeninu a nech to v troubě do zlatová upéct; potom svítek <b>vy</b>klop a dej ho na stůl buď co samostatné jídlo, nebo ho rozkrájej a poklaď jim buď mrkev aneb jinou zeleninu.</p>
 
