--- a/src/zadelavana-a-dusena-jidla.html
+++ b/src/zadelavana-a-dusena-jidla.html
@@ -4,7 +4,7 @@
 
 <p>Náležitě očištěná a zašpejlovaná kuřátka nech buď v hovězí polívce vařit anebo na kastrolu na novém másle dusit; v posledním případu musíš je častěji podlévat polívkou, aby nezčervenaly. Zatím usekej drobnince půl libry telecího masa, vyber z něj všecky žilky, dej k němu 4 loty hovězího tuku (morku), jednu ostrouhanou, ve vodě máčenou vymačkanou žemličku, 3 míchané vejce, trochu na drobno rozkrájené citronové kůrky, trochu květu, trochu soli, všecko dohromady dobře usekej a umíchej, pak namáčejíc ruce v čisté studené vodě dělej z toho malé knedlíčky a klaď je na prkénko. Když jsou kuřátka dost měkká, vyndej je, šťávu z nich proceď do hrnku, přilej k ní ještě dostatečně polívky a zapraž to bílou jíškou v hezky hustou omáčku, pak ji vlej opět na kastrol, vlož do ni kuřátka a nech to povařit; knedlíčky pak vhod do vařící, trochu osolené vody, a když jsou dost vařené (což poznáš, když jeden okusíš), urovnej kuřátka do prostřed mísy, knedlíčky dej okolo a polej vše omáčkou, k nížto můžeš připojit buď trochu květu nebo sekané zelené petružele.</p>
 
-<h2><i></i>Kuřata se hříbkami</h2>
+<h2>Kuřata se hříbkami</h2>
 
 <p>Dobře očištěná kuřátka nech buď vařit v hovězí polívce, anebo, je-li k tomu čas, nech je dusit na kousku másla. Suché hříbky nech asi půl hodiny ve vodě močit, aby zbělely, pak je uvař v hovězí polívce; když jsou vařeny, usekej je na drobninko, dej je ke kuřátkům s trochou usekané zelené petružele, polívku zapraž bílou jištičkou, přidej k tomu trochu sladké vařené smetany a trochu květu, nech to ještě malinko povařit a nes to na stůl. Mísu okrášli kolem zelenou petruželí.</p>
 
@@ -86,7 +86,7 @@
 
 <p>Rozkrájej telecí libové maso na ouhledné kousky, sklepej je a něco málo posol; dej ná kuthan na libru řízků asi čtyry loty másla, půl drobně pokrájené cibule a nech to trochu zapěnit, pak do toho vlož ty řízky a nech je přikryté dusit, až jsou dost měkké; kdyby příliš vysmahly, musíš přilévat po lžíci hovězí polívky, aby zůstaly ve šťávě; nyní udělej ze čtyr sardelí sardelové máslo, dej ho k tomu masu a nech to ještě chvilku dusit; potom to dej na mísu, okolo udělej věnec ze strouhané, do zlatová usmažené žemličky, dej k tomu citronové čtvrtky buď vůkol mísy, nebo zvlášť na talířek, a nes to na stůl.</p>
 
-<h2><i></i>Telecí řízky ze studené pečeně</h2>
+<h2>Telecí řízky ze studené pečeně</h2>
 
 <p>Ze studené telecí pečeně nakrájejí se ouhledné řízky, mísa nebo kuthánek vymaže se máslem, několik sardelí se uměje, kůstky se vyndají, sardele se rozetřou s novým máslem, potom se vloží na mísu vrstva řízků, na každý řízek se dá kousek sardelového másla a posype se to strouhanou žemličkou, pak se dá zase vrstva řízků, na to sardelové máslo, posype se to strouhanou žemličkou, a tak se pokračuje, až jest všecko; nyní se na to naleje trochu hovězí polívky, přiklopí se to talířem a nechá se to na teplém místě trochu prohřát. Když se to dává na tabuli, může se to buď zacedit citronovou šťávou, anebo se můžou okolo mísy dát citronové čtvrtky, aby si každý dle libosti šťávy nacedil. Ještě chutnější to jest, když se mezi sardelové máslo přimíchá trochu citronové kůry a trochu květu.</p>
 
